SERVER-53334 User assert instead of invariant in ClientMetadata