src/mongo/rpc/metadata/client_metadata.cpp
@@ -439,7 +439,10 @@ const BSONObj& ClientMetadata::getDocument() const {
 }
 
 void ClientMetadata::logClientMetadata(Client* client) const {
-    invariant(!getDocument().isEmpty());
+    if (getDocument().isEmpty()) {
+        return;
+    }
+
     LOGV2(51800,
           "received client metadata from {remote} {client}: {doc}",
           "client metadata",
@@ -521,16 +524,16 @@ void ClientMetadata::setFromMetadataForOperation(OperationContext* opCtx, BSONEl
 }
 
 void ClientMetadata::setFromMetadata(Client* client, BSONElement& elem) {
-    auto& state = getClientState(client);
+    if (elem.eoo()) {
+        return;
+    }
 
+    auto& state = getClientState(client);
     {
         auto lk = stdx::lock_guard(*client);
-        if (state.isFinalized) {
-            uassert(ErrorCodes::ClientMetadataCannotBeMutated,
-                    "The client metadata document may only be sent in the first hello",
-                    elem.eoo());
-            return;
-        }
+        uassert(ErrorCodes::ClientMetadataCannotBeMutated,
+                "The client metadata document may only be sent in the first hello",
+                !state.isFinalized);
     }
 
     auto meta = ClientMetadata::readFromMetadata(elem);
@@ -542,7 +545,6 @@ void ClientMetadata::setFromMetadata(Client* client, BSONElement& elem) {
     }
 
     auto lk = stdx::lock_guard(*client);
-    invariant(!state.meta, "ClientMetadata was previously set, it should be set precisely once");
     state.meta = std::move(meta);
 }
 
